--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "bin": "bin.js",
   "scripts": {
+    "start" : "node bin.js ./config.json",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "parcel build index.js"
   },
